syntax = "proto3";

package proto;


service Config {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Update(UpdateRequest) returns (UpdateResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc Search(SearchRequest) returns (SearchResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc AuditLog(AuditLogRequest) returns (AuditLogResponse) {}
	rpc Watch(WatchRequest) returns (stream WatchResponse) {}
}

message ChangeSet {
	int64 timestamp = 1;
	string data = 2;
	string checksum = 3;
	string source = 4;
	string format = 5;
}

message ConfigSet {
	string name = 1;
	string path = 2;
	string version = 3;
	string comment = 4;
	int64 createdAt = 5;
	int64 updatedAt = 6;
	int32 status = 7;
	ChangeSet change_set = 8;
}

message ChangeLog {
	string action = 1;
	ConfigSet configSet = 2;
}

message CreateRequest {
	ConfigSet configSet = 1;
}

message CreateResponse {
	int32 resp = 1;
}

message UpdateRequest {
	ConfigSet configSet = 1;
}

message UpdateResponse {
	int32 resp = 1;
}

message DeleteRequest {
	ConfigSet configSet = 1;
}

message DeleteResponse {
	int32 resp = 1;
}

message ReadRequest {
	string name = 1;
	string path = 2;
	string version = 3;
	bool delInclude = 4;
}

message ReadResponse {
	int32 resp = 1;
	ConfigSet configSet = 2;
}

message SearchRequest {
	string name = 1;
	string path = 2;
	string version = 3;
	int32 status = 4;
	int64 limit = 5;
	int64 offset = 6;
}

message SearchResponse {
	int32 resp = 1;
	repeated ConfigSet configs = 2;
}

message WatchRequest {
	string name = 1;
	string path = 2;
	string version = 3;
}

message WatchResponse {
	string name = 1;
	string path = 2;
	string version = 3;
	int32 status = 4;
	ChangeSet changeSet = 5;
}

message AuditLogRequest {
	// from unix timestamp
	int64 from = 1;
	// to unix timestamp
	int64 to = 2;
	// limit number items
	int64 limit = 3;
	// the offset
	int64 offset = 4;
	// reverse the order
	bool reverse = 5;
}

message AuditLogResponse {
	int32 resp = 1;
	repeated ChangeLog changes = 2;
}
